mwlib/_mwscan.cc
/* Generated by re2c 0.13.2 on Mon Feb 25 11:49:53 2008 */
#line 1 "_mwscan.re"
// -*- mode: c++ -*-
// Copyright (c) 2007-2008 PediaPress GmbH
// See README.txt for additional licensing information.

#include <Python.h>

#include <iostream>
#include <assert.h>
#include <vector>
using namespace std;

#define RET(x) {found(x); return x;}

typedef enum {
	t_end,
	t_text,
	t_entity,
	t_special,
	t_magicword,
	t_comment,
	t_2box_open,   // [[
	t_2box_close,  // ]]
	t_http_url,
	t_break,
	t_begin_table,
	t_end_table,
	t_html_tag,
	t_style,
	t_pre,
	t_section,
	t_section_end,
	t_item,
	t_colon,
	t_semicolon,
	t_hrule,
	t_newline,
	t_column,
	t_row,
	t_tablecaption,
	t_urllink,
} mwtok;

struct Token
{
	int type;
	int start;
	int len;
};

class Scanner
{
public:

	Scanner(Py_UNICODE *_start, Py_UNICODE *_end) {
		source = start = _start;
		end = _end;
		cursor = start;
		line_startswith_section = -1;
		tablemode=0;
	}

	int found(mwtok val) {
		if (val==t_text && tokens.size()) {
			Token &previous_token (tokens[tokens.size()-1]);
			if (previous_token.type==val) {
				previous_token.len += cursor-start;
				return tokens.size()-1;
			}
		}
		Token t;
		t.type = val;
		t.start = (start-source);
		t.len = cursor-start;			
		tokens.push_back(t);
		return tokens.size()-1;
	}

	bool bol() const {
		return (start==source) || (start[-1]=='\n');
	}

	bool eol() const {
		return *cursor=='\n' || *cursor==0;
	}

	void newline() {
		if (line_startswith_section>=0) {
			tokens[line_startswith_section].type = t_text;
		}
		line_startswith_section = -1;
	}

	inline int scan();

	Py_UNICODE *source;

	Py_UNICODE *start;
	Py_UNICODE *cursor;
	Py_UNICODE *end;
	vector<Token> tokens;

	int line_startswith_section;
	int tablemode;
};


int Scanner::scan()
{
	start=cursor;
	
	Py_UNICODE *marker=cursor;

	Py_UNICODE *save_cursor = cursor;


#define YYCTYPE         Py_UNICODE
#define YYCURSOR        cursor
#define YYMARKER	marker
#define YYLIMIT   (end)
// #define YYFILL(n) return 0;

#line 124 "_mwscan.re"


/*
  the re2c manpage says:
  "The user must arrange for a sentinel token to appear at the end of input"
  \000 is our sentinel token.
*/

#line 155 "_mwscan.re"

	if (!bol()) {
		goto not_bol;
	}

#line 140 "_mwscan.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	yych = *YYCURSOR;
	if (yych <= ',') {
		if (yych <= '"') {
			if (yych <= 0x001F) goto yy17;
			if (yych <= ' ') goto yy2;
			if (yych <= '!') goto yy6;
			goto yy17;
		} else {
			if (yych <= '#') goto yy11;
			if (yych == '*') goto yy11;
			goto yy17;
		}
	} else {
		if (yych <= ';') {
			if (yych <= '-') goto yy15;
			if (yych <= '9') goto yy17;
			if (yych <= ':') goto yy9;
			goto yy13;
		} else {
			if (yych <= '=') {
				if (yych <= '<') goto yy17;
				goto yy7;
			} else {
				if (yych == '|') goto yy4;
				goto yy17;
			}
		}
	}
yy2:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 0x001F) goto yy3;
	if (yych <= '!') goto yy42;
	if (yych == '|') goto yy42;
yy3:
#line 165 "_mwscan.re"
	{RET(t_pre);}
#line 182 "_mwscan.cc"
yy4:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '-') goto yy34;
	if (yych == '}') goto yy37;
yy5:
#line 163 "_mwscan.re"
	{if (tablemode) RET(t_column) else RET(t_text);}
#line 190 "_mwscan.cc"
yy6:
	yych = *++YYCURSOR;
	goto yy5;
yy7:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy32;
	goto yy31;
yy8:
#line 166 "_mwscan.re"
	{
			line_startswith_section = found(t_section);
			return t_section;
		}
#line 204 "_mwscan.cc"
yy9:
	++YYCURSOR;
	if ((yych = *YYCURSOR) <= ')') {
		if (yych == '#') goto yy26;
	} else {
		if (yych <= '*') goto yy26;
		if (yych == ':') goto yy28;
	}
yy10:
#line 171 "_mwscan.re"
	{RET(t_colon);}
#line 216 "_mwscan.cc"
yy11:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy27;
yy12:
#line 170 "_mwscan.re"
	{RET(t_item);}
#line 224 "_mwscan.cc"
yy13:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy25;
yy14:
#line 172 "_mwscan.re"
	{RET(t_semicolon);}
#line 232 "_mwscan.cc"
yy15:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '-') goto yy18;
yy16:
#line 175 "_mwscan.re"
	{goto not_bol;}
#line 240 "_mwscan.cc"
yy17:
	yych = *++YYCURSOR;
	goto yy16;
yy18:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy20;
yy19:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 0) {
		goto yy3;
	} else {
		goto yy16;
	}
yy20:
	yych = *++YYCURSOR;
	if (yych != '-') goto yy19;
yy21:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych == '-') goto yy21;
#line 173 "_mwscan.re"
	{RET(t_hrule);}
#line 263 "_mwscan.cc"
yy24:
	++YYCURSOR;
	yych = *YYCURSOR;
yy25:
	if (yych == ';') goto yy24;
	goto yy14;
yy26:
	++YYCURSOR;
	yych = *YYCURSOR;
yy27:
	if (yych == '#') goto yy26;
	if (yych == '*') goto yy26;
	goto yy12;
yy28:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= ')') {
		if (yych == '#') goto yy26;
		goto yy10;
	} else {
		if (yych <= '*') goto yy26;
		if (yych == ':') goto yy28;
		goto yy10;
	}
yy30:
	++YYCURSOR;
	yych = *YYCURSOR;
yy31:
	if (yych == 0x0009) goto yy30;
	if (yych == ' ') goto yy30;
	goto yy8;
yy32:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= 0x001F) {
		if (yych == 0x0009) goto yy30;
		goto yy8;
	} else {
		if (yych <= ' ') goto yy30;
		if (yych == '=') goto yy32;
		goto yy8;
	}
yy34:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych == '-') goto yy34;
#line 162 "_mwscan.re"
	{if (tablemode) RET(t_row) else RET(t_text);}
#line 312 "_mwscan.cc"
yy37:
	++YYCURSOR;
#line 160 "_mwscan.re"
	{--tablemode; RET(t_end_table);}
#line 317 "_mwscan.cc"
yy39:
	yych = *++YYCURSOR;
	goto yy5;
yy40:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy34;
	if (yych == '}') goto yy37;
	goto yy5;
yy41:
	++YYCURSOR;
	yych = *YYCURSOR;
yy42:
	if (yych <= '!') {
		if (yych <= 0x001F) goto yy19;
		if (yych <= ' ') goto yy41;
		goto yy39;
	} else {
		if (yych == '|') goto yy40;
		goto yy19;
	}
}
#line 176 "_mwscan.re"



not_bol:
	cursor = save_cursor;
	marker = cursor;


#line 348 "_mwscan.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	if (yych <= '=') {
		if (yych <= '&') {
			if (yych <= 0x000A) {
				if (yych <= 0x0000) goto yy64;
				if (yych <= 0x0009) goto yy66;
				goto yy54;
			} else {
				if (yych == '!') goto yy57;
				if (yych <= '%') goto yy66;
				goto yy63;
			}
		} else {
			if (yych <= '9') {
				if (yych <= '\'') goto yy61;
				if (yych <= '/') goto yy66;
				goto yy50;
			} else {
				if (yych <= ':') goto yy59;
				if (yych <= ';') goto yy66;
				if (yych <= '<') goto yy62;
				goto yy52;
			}
		}
	} else {
		if (yych <= '_') {
			if (yych <= '[') {
				if (yych <= '@') goto yy66;
				if (yych <= 'Z') goto yy50;
			} else {
				if (yych == ']') goto yy51;
				if (yych <= '^') goto yy66;
				goto yy49;
			}
		} else {
			if (yych <= 'h') {
				if (yych <= '`') goto yy66;
				if (yych <= 'g') goto yy50;
				goto yy47;
			} else {
				if (yych <= 'z') goto yy50;
				if (yych <= '{') goto yy60;
				if (yych <= '|') goto yy56;
				goto yy66;
			}
		}
	}
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '[') goto yy225;
	if (yych == 'h') goto yy227;
yy46:
#line 206 "_mwscan.re"
	{RET(t_special);}
#line 406 "_mwscan.cc"
yy47:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == 't') goto yy215;
	goto yy117;
yy48:
#line 187 "_mwscan.re"
	{RET(t_text);}
#line 414 "_mwscan.cc"
yy49:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy118;
	goto yy117;
yy50:
	yych = *++YYCURSOR;
	goto yy117;
yy51:
	yych = *++YYCURSOR;
	if (yych == ']') goto yy114;
	goto yy46;
yy52:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '=') goto yy112;
	goto yy111;
yy53:
#line 190 "_mwscan.re"
	{
			if (eol()) {
			        if (line_startswith_section>=0) {
				     line_startswith_section=-1;
				     RET(t_section_end);
                                } else {
				     RET(t_text);
                                }
			} else {
				RET(t_text);
			}
		    }
#line 444 "_mwscan.cc"
yy54:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == 0x000A) goto yy107;
#line 203 "_mwscan.re"
	{newline(); RET(t_newline);}
#line 450 "_mwscan.cc"
yy56:
	yych = *++YYCURSOR;
	if (yych <= '+') {
		if (yych == '!') goto yy101;
		if (yych <= '*') goto yy46;
		goto yy105;
	} else {
		if (yych <= '{') goto yy46;
		if (yych <= '|') goto yy101;
		if (yych <= '}') goto yy103;
		goto yy46;
	}
yy57:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '!') goto yy101;
yy58:
#line 218 "_mwscan.re"
	{RET(t_text);}
#line 469 "_mwscan.cc"
yy59:
	yych = *++YYCURSOR;
	goto yy46;
yy60:
	yych = *++YYCURSOR;
	if (yych == '|') goto yy99;
	goto yy58;
yy61:
	yych = *++YYCURSOR;
	if (yych == '\'') goto yy94;
	goto yy58;
yy62:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '/') {
		if (yych == '!') goto yy78;
		if (yych <= '.') goto yy58;
		goto yy79;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy58;
			goto yy80;
		} else {
			if (yych <= '`') goto yy58;
			if (yych <= 'z') goto yy80;
			goto yy58;
		}
	}
yy63:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '9') {
		if (yych == '#') goto yy67;
		if (yych <= '/') goto yy58;
		goto yy69;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy58;
			goto yy69;
		} else {
			if (yych <= '`') goto yy58;
			if (yych <= 'z') goto yy69;
			goto yy58;
		}
	}
yy64:
	++YYCURSOR;
#line 217 "_mwscan.re"
	{newline(); return t_end;}
#line 519 "_mwscan.cc"
yy66:
	yych = *++YYCURSOR;
	goto yy58;
yy67:
	yych = *++YYCURSOR;
	if (yych <= 'W') {
		if (yych <= '/') goto yy68;
		if (yych <= '9') goto yy74;
	} else {
		if (yych <= 'X') goto yy73;
		if (yych == 'x') goto yy73;
	}
yy68:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 1) {
		if (yyaccept <= 0) {
			goto yy46;
		} else {
			goto yy58;
		}
	} else {
		if (yyaccept <= 2) {
			goto yy95;
		} else {
			goto yy48;
		}
	}
yy69:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= ';') {
		if (yych <= '/') goto yy68;
		if (yych <= '9') goto yy69;
		if (yych <= ':') goto yy68;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy68;
			goto yy69;
		} else {
			if (yych <= '`') goto yy68;
			if (yych <= 'z') goto yy69;
			goto yy68;
		}
	}
yy71:
	++YYCURSOR;
#line 215 "_mwscan.re"
	{RET(t_entity);}
#line 568 "_mwscan.cc"
yy73:
	yych = *++YYCURSOR;
	if (yych == ';') goto yy68;
	goto yy77;
yy74:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= '/') goto yy68;
	if (yych <= '9') goto yy74;
	if (yych == ';') goto yy71;
	goto yy68;
yy76:
	++YYCURSOR;
	yych = *YYCURSOR;
yy77:
	if (yych <= ';') {
		if (yych <= '/') goto yy68;
		if (yych <= '9') goto yy76;
		if (yych <= ':') goto yy68;
		goto yy71;
	} else {
		if (yych <= 'F') {
			if (yych <= '@') goto yy68;
			goto yy76;
		} else {
			if (yych <= '`') goto yy68;
			if (yych <= 'f') goto yy76;
			goto yy68;
		}
	}
yy78:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy86;
	goto yy68;
yy79:
	yych = *++YYCURSOR;
	if (yych <= '@') goto yy68;
	if (yych <= 'Z') goto yy80;
	if (yych <= '`') goto yy68;
	if (yych >= '{') goto yy68;
yy80:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= '>') {
		if (yych <= ';') {
			if (yych <= 0x0000) goto yy68;
		} else {
			if (yych <= '<') goto yy68;
			if (yych >= '>') goto yy84;
		}
	} else {
		if (yych <= 'Z') {
			if (yych >= 'A') goto yy80;
		} else {
			if (yych <= '`') goto yy82;
			if (yych <= 'z') goto yy80;
		}
	}
yy82:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= '<') {
		if (yych <= 0x0000) goto yy68;
		if (yych <= ';') goto yy82;
		goto yy68;
	} else {
		if (yych != '>') goto yy82;
	}
yy84:
	++YYCURSOR;
#line 211 "_mwscan.re"
	{RET(t_html_tag);}
#line 641 "_mwscan.cc"
yy86:
	yych = *++YYCURSOR;
	if (yych != '-') goto yy68;
yy87:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= ';') {
		if (yych <= 0x0000) goto yy68;
		if (yych != '-') goto yy87;
	} else {
		if (yych == '=') goto yy87;
		if (yych <= '>') goto yy68;
		goto yy87;
	}
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= ';') {
		if (yych <= 0x0000) goto yy68;
		if (yych != '-') goto yy87;
	} else {
		if (yych == '=') goto yy87;
		if (yych <= '>') goto yy68;
		goto yy87;
	}
yy90:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= ';') {
		if (yych <= 0x0000) goto yy68;
		if (yych == '-') goto yy90;
		goto yy87;
	} else {
		if (yych <= '<') goto yy68;
		if (yych != '>') goto yy87;
	}
	++YYCURSOR;
#line 214 "_mwscan.re"
	{RET(t_comment);}
#line 680 "_mwscan.cc"
yy94:
	++YYCURSOR;
	if ((yych = *YYCURSOR) == '\'') goto yy96;
yy95:
#line 209 "_mwscan.re"
	{RET(t_style);}
#line 687 "_mwscan.cc"
yy96:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych != '\'') goto yy95;
	yych = *++YYCURSOR;
	if (yych != '\'') goto yy68;
	yych = *++YYCURSOR;
	goto yy95;
yy99:
	++YYCURSOR;
#line 207 "_mwscan.re"
	{++tablemode; RET(t_begin_table);}
#line 700 "_mwscan.cc"
yy101:
	++YYCURSOR;
#line 204 "_mwscan.re"
	{if (tablemode) RET(t_column) else RET(t_special);}
#line 705 "_mwscan.cc"
yy103:
	++YYCURSOR;
#line 208 "_mwscan.re"
	{--tablemode; RET(t_end_table);}
#line 710 "_mwscan.cc"
yy105:
	++YYCURSOR;
#line 205 "_mwscan.re"
	{if (tablemode) RET(t_tablecaption) else RET(t_special);}
#line 715 "_mwscan.cc"
yy107:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych == 0x000A) goto yy107;
#line 202 "_mwscan.re"
	{newline(); RET(t_break);}
#line 722 "_mwscan.cc"
yy110:
	++YYCURSOR;
	yych = *YYCURSOR;
yy111:
	if (yych == 0x0009) goto yy110;
	if (yych == ' ') goto yy110;
	goto yy53;
yy112:
	++YYCURSOR;
	yych = *YYCURSOR;
	if (yych <= 0x001F) {
		if (yych == 0x0009) goto yy110;
		goto yy53;
	} else {
		if (yych <= ' ') goto yy110;
		if (yych == '=') goto yy112;
		goto yy53;
	}
yy114:
	++YYCURSOR;
#line 189 "_mwscan.re"
	{RET(t_2box_close);}
#line 745 "_mwscan.cc"
yy116:
	++YYCURSOR;
	yych = *YYCURSOR;
yy117:
	if (yych <= 'Z') {
		if (yych <= '/') goto yy48;
		if (yych <= '9') goto yy116;
		if (yych <= '@') goto yy48;
		goto yy116;
	} else {
		if (yych <= '_') {
			if (yych <= '^') goto yy48;
			goto yy116;
		} else {
			if (yych <= '`') goto yy48;
			if (yych <= 'z') goto yy116;
			goto yy48;
		}
	}
yy118:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'E':	goto yy122;
	case 'F':	goto yy121;
	case 'N':	goto yy120;
	case 'S':	goto yy123;
	case 'T':	goto yy119;
	default:	goto yy117;
	}
yy119:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy212;
	goto yy117;
yy120:
	yych = *++YYCURSOR;
	if (yych == 'E') goto yy142;
	if (yych == 'O') goto yy143;
	goto yy117;
yy121:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy134;
	goto yy117;
yy122:
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy131;
	goto yy117;
yy123:
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'A') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'R') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
yy129:
	++YYCURSOR;
	if ((yych = *YYCURSOR) <= 'Z') {
		if (yych <= '/') goto yy130;
		if (yych <= '9') goto yy116;
		if (yych >= 'A') goto yy116;
	} else {
		if (yych <= '_') {
			if (yych >= '_') goto yy116;
		} else {
			if (yych <= '`') goto yy130;
			if (yych <= 'z') goto yy116;
		}
	}
yy130:
#line 186 "_mwscan.re"
	{RET(t_magicword);}
#line 822 "_mwscan.cc"
yy131:
	yych = *++YYCURSOR;
	if (yych != 'D') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy134:
	yych = *++YYCURSOR;
	if (yych != 'R') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'O') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy142:
	yych = *++YYCURSOR;
	if (yych == 'W') goto yy199;
	goto yy117;
yy143:
	yych = *++YYCURSOR;
	switch (yych) {
	case 'C':	goto yy146;
	case 'E':	goto yy145;
	case 'G':	goto yy147;
	case 'T':	goto yy144;
	default:	goto yy117;
	}
yy144:
	yych = *++YYCURSOR;
	if (yych <= 'H') {
		if (yych == 'C') goto yy182;
		goto yy117;
	} else {
		if (yych <= 'I') goto yy183;
		if (yych == 'O') goto yy184;
		goto yy117;
	}
yy145:
	yych = *++YYCURSOR;
	if (yych == 'D') goto yy171;
	goto yy117;
yy146:
	yych = *++YYCURSOR;
	if (yych == 'C') goto yy155;
	if (yych == 'O') goto yy156;
	goto yy117;
yy147:
	yych = *++YYCURSOR;
	if (yych != 'A') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'L') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'L') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'R') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'Y') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy155:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy170;
	goto yy117;
yy156:
	yych = *++YYCURSOR;
	if (yych != 'N') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'N') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'O') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'N') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'V') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'R') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy170:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy171:
	yych = *++YYCURSOR;
	if (yych != 'I') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'S') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'I') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'O') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'N') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy182:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy198;
	goto yy117;
yy183:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy187;
	goto yy117;
yy184:
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy187:
	yych = *++YYCURSOR;
	if (yych != 'L') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'O') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'N') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'V') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'R') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy198:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy199:
	yych = *++YYCURSOR;
	if (yych != 'S') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'E') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'T') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'I') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'O') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'N') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'L') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'I') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'N') goto yy117;
	yych = *++YYCURSOR;
	if (yych != 'K') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
	yych = *++YYCURSOR;
	if (yych == '_') goto yy129;
	goto yy117;
yy212:
	yych = *++YYCURSOR;
	if (yych != 'C') goto yy117;
	yych = *++YYCURSOR;
	if (yych != '_') goto yy117;
